# DyLike

./: README.md  spike_compare.py
docs/: developer-guide.md  user-guide.md
docs/superpowers/plans/: 2026-07-19-mpv-sequential-read-toggle.md  2026-07-19-mpv-webdav-cache-toggle.md  2026-07-19-short-video-webdav-delete-rename-fix.md  2026-07-20-exo-adaptive-sharpen.md  2026-07-20-glsurfaceview-sharpen.md  2026-07-20-mpv-fsr-super-resolution.md  2026-07-20-ncnn-neural-super-resolution.md  2026-07-21-background-play-plan.md
docs/superpowers/specs/: 2026-07-19-mpv-sequential-read-toggle-design.md  2026-07-19-mpv-webdav-cache-toggle-design.md  2026-07-19-mpv-webdav-lag-rootcause.md  2026-07-19-short-video-webdav-delete-fix-design.md  2026-07-20-exo-adaptive-sharpen-design.md  2026-07-20-glsurfaceview-sharpen-design.md  2026-07-20-mpv-fsr-super-resolution-design.md  2026-07-20-mpv-shader-super-resolution-spike.md  2026-07-20-ncnn-neural-super-resolution-design.md  2026-07-21-background-play-design.md  2026-07-23-short-video-immersive-design.md
dy-player/: build.gradle.kts  proguard-rules.pro
dy-player/src/main/: AndroidManifest.xml
dy-player/src/main/java/me/lingci/dy/player/core/: DyPlayerCoreRegistry.kt
dy-player/src/main/java/me/lingci/dy/player/entity/: MediaData.kt  SourceData.kt
dy-player/src/main/java/me/lingci/dy/player/service/: PlaybackBinder.kt  PlaybackModels.kt  PlaybackNotificationHelper.kt  PlaybackService.kt
dy-player/src/main/java/me/lingci/dy/player/ui/file_browser/: FileBrowserActivity.kt
dy-player/src/main/java/me/lingci/dy/player/ui/long_video/: BlackScreenWatchdog.kt  LongDanmakuController.kt  LongTrackPanelController.kt  LongVideoActivity.kt  PiPActionReceiver.kt
dy-player/src/main/java/me/lingci/dy/player/ui/main/: MainActivity.kt
dy-player/src/main/java/me/lingci/dy/player/ui/media/: MediaFragment.kt
dy-player/src/main/java/me/lingci/dy/player/ui/media_detail/: MediaDetailActivity.kt  MediaDetailAdapter.kt  VideoShortItemAdapter.kt
dy-player/src/main/java/me/lingci/dy/player/ui/media_full/: MediaFullActivity.kt  MediaItemAdapter.kt
dy-player/src/main/java/me/lingci/dy/player/ui/short_video/: ShortCommentController.kt  ShortSettingsDialog.kt  ShortVideoActivity.kt  ShortVideoAdapter.kt  ShortVideoFileActions.kt  SubtitleDockController.kt  TimerCloseController.kt
dy-player/src/main/java/me/lingci/dy/player/ui/source/: SmbManagerDialog.kt  SourceFragment.kt  SourceItemAdapter.kt
dy-player/src/main/java/me/lingci/dy/player/ui/tool/: BackupSettingsFragment.kt  LabSettingsFragment.kt  PlayerSettingsFragment.kt
dy-player/src/main/java/me/lingci/dy/player/util/: CoverHelper.kt  ExternalSubtitleLoader.kt  LibraryCompat.kt  MediaPlaybackRecorder.kt  PlaybackTraceHelper.kt  SpUtil.kt  VideoListTempStore.kt
dy-player/src/main/java/me/lingci/dy/player/view/: LongVideoControlView.java  NodeSeekBar.kt  ShortVideoControlView.java
dy-player/src/main/res/drawable/: ic_forward_15.xml  ic_immersive.xml  ic_pip.xml  ic_rewind_15.xml
dy-player/src/main/res/layout/: dialog_short_settings.xml  dialog_source_smb.xml  fragment_lab_setting.xml  fragment_player_setting.xml  layout_long_video_control_view.xml  layout_short_video_control_view.xml
dy-player/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
lib-base/src/main/java/me/lingci/lib/base/storage/: StorageManager.kt
lib-base/src/main/java/me/lingci/lib/base/storage/impl/: SmbStorage.kt  WebDavStorage.kt
lib-base/src/main/java/me/lingci/lib/base/storage/smb/: SmbAuthToken.kt
lib-player/dkplayer-java/: build.gradle.kts
lib-player/dkplayer-java/src/main/java/xyz/doikki/videoplayer/player/: BaseVideoView.java
lib-player/dkplayer-java/src/main/java/xyz/doikki/videoplayer/render/: TextureRenderView.java
lib-player/dkplayer-java/src/main/java/xyz/doikki/videoplayer/util/: BackgroundPlayState.java  NotificationRequestCode.java  PlayerUtils.java  ProgressUtils.java  SeekPositionHelper.java
lib-player/dkplayer-java/src/test/java/xyz/doikki/videoplayer/util/: BackgroundPlayStateTest.java  NotificationRequestCodeTest.java  ProgressUtilsTest.java  SeekPositionHelperTest.java
lib-player/player-exo/: build.gradle.kts
lib-player/player-exo/src/main/assets/shaders/: blit_oes_to_rgba_es2.glsl  blit_rgba_es2.glsl  fragment_shader_tint_es2.glsl  sgsr_fragment_es2.glsl  tint_fragment_es2.glsl  unsharp_fragment_es2.glsl  video_vertex_es2.glsl
lib-player/player-exo/src/main/cpp/: CMakeLists.txt  ncnn_sr_jni.cpp  ncnn_sr_stub.cpp  omp_stub.cpp
lib-player/player-exo/src/main/java/me/lingci/lib/player/exo/: CustomExoMediaPlayer.kt
lib-player/player-exo/src/main/java/xyz/doikki/videoplayer/exo/: ExoMediaPlayer.java  ExoMediaSourceHelper.java  PlaybackStateResolver.java
lib-player/player-exo/src/main/jni/: .gitignore
lib-player/player-exo/src/test/java/xyz/doikki/videoplayer/exo/: PlaybackStateResolverTest.java
lib-player/player-mpv/src/main/assets/shaders/: CAS.glsl  spike_red_tint.glsl
scripts/: verify-ui.sh
(+15 files in other folders)
